--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="./styles/main.css">
 
-  <link rel="stylesheet" href="./styles/min.css">
+  <!-- <link rel="stylesheet" href="./styles/min.css"> -->
 
 </head>
 <body>
@@ -88,7 +88,7 @@
   <!-- footer part ends -->
 
   <script src="./main.js">
-    
+
   </script>
 
 </body>
